--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -160,6 +160,7 @@ display_help() {
     echo "  -v, --version             Print the version string"
     echo "  -r, --replay    [path]    <application> <application-arguments> will be treated as paths to traces folders ($HOME/lttng-traces/...)"
     echo "                            If no arguments are provided, will use the latest trace available"
+    echo "  -s, --sample              Activate sampling"
     echo
     echo " Example:"
     echo " $(basename $0) ./a.out"
@@ -331,6 +332,15 @@ setup_lttng() {
     #Preventing trace event record loss
     export LTTNG_UST_ALLOW_BLOCKING=1
     lttngq enable-channel --userspace --blocking-timeout=inf blocking-channel
+
+    #Activate sampling on non-blocking stream
+    if [ $sample == true ]; then
+        export LTTNG_UST_SAMPLING=1
+        lttngq enable-channel --userspace nonblocking-channel
+        lttngq enable-event --channel=nonblocking-channel --userspace lttng_ust_sampling:*
+        lttngq enable-event --channel=nonblocking-channel --userspace lttng_ust_ze_sampling:*
+        lttngq add-context --userspace --channel=nonblocking-channel -t vpid -t vtid
+    fi
 
 <% if languages.include?("omp") %>
     enable_events_omp
@@ -555,6 +565,7 @@ asm=false
 replay=false
 cleanup=false
 profile=true
+sample=false
 
 while (( "$#" )); do
     case "$1" in
@@ -567,6 +578,7 @@ while (( "$#" )); do
         -l | --timeline)        shift; mode="timeline" ;;
         -j | --json)            shift; bt_tally_argv+=" --display_mode=json" ;;
         -m | --tracing-mode)    shift; tracing_mode=$1; shift ;;
+        -s | --sample)          shift; sample=true;;
         --no-profile)           shift; profile=false ;;
         --backend-level)        shift; bt_tally_argv+=" --backend_level=$1"; shift ;;
         --no-save)              shift; processing_mode="on-the-fly" ;;
