--- a/ze/ze_events.yaml
+++ b/ze/ze_events.yaml
@@ -1,4 +1,28 @@
 ---
+lttng_ust_ze_sampling:
+  events:
+  - name: gpu_energy
+    args:
+    - [ ze_device_handle_t, hDevice ]
+    - [ uint32_t, domain]
+    - [ uint64_t, energy ]
+    - [ uint64_t, timestamp ]
+    fields:
+    - [ ctf_integer_hex, uintptr_t, hDevice, "(uintptr_t)hDevice" ]
+    - [ ctf_integer, uint32_t, domain, "domain" ]
+    - [ ctf_integer, uint64_t, energy, "energy" ]
+    - [ ctf_integer, uint64_t, timestamp, "timestamp" ]
+  - name: gpu_frequency
+    args:
+    - [ ze_device_handle_t, hDevice ]
+    - [ uint32_t, domain]
+    - [ uint64_t, timestamp ] 
+    - [ uint64_t, frequency ]
+    fields:
+    - [ ctf_integer_hex, uintptr_t, hDevice, "(uintptr_t)hDevice" ]
+    - [ ctf_integer, uint32_t, domain, "domain" ]
+    - [ ctf_integer, uint64_t, timestamp, "timestamp" ]
+    - [ ctf_integer, uint64_t, frequency, "frequency" ]
 lttng_ust_ze_profiling:
   events:
   - name: event_profiling
