--- a/utils/babeltrace_thapi.in
+++ b/utils/babeltrace_thapi.in
@@ -170,9 +170,8 @@ def get_components(names)
           str = Time.at(0, m.get_default_clock_snapshot.ns_from_origin, :nsec).strftime('%H:%M:%S.%9L').to_s
           if $options[:context]
             str << " - #{e.stream.trace.get_environment_entry_value_by_name('hostname')}"
-            str << ' - ' << e.get_common_context_field.value.collect do |k, v|
-              "#{k}: #{v}"
-            end.join(', ')
+            common_context_field = e.get_common_context_field
+            str << " - " << common_context_field.value.collect { |k, v| "#{k}: #{v}" }.join(", ") if common_context_field
           end
           str << " - #{e.name}: "
           str << (l ? l.call(e.payload_field.value) : e.payload_field.to_s)
