--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -324,8 +324,6 @@ setup_lttng() {
 <% end %>
     THAPI_LTTNG_O=$THAPI_LTTNG_O_ROOT/$(hostname)
 
-    #Preventing trace event record loss
-    export LTTNG_UST_ALLOW_BLOCKING=1
     if [ ${1:-""} = "--live" ]; then
 
         local arr=($(pidof lttng-relayd))
@@ -446,7 +444,8 @@ trace_and_summary() {
     trap 'trace_epilogue' EXIT SIGABRT SIGSEGV
 
     preload_lib_tracers
-    "$@"
+    #Preventing trace event record loss
+    LTTNG_UST_ALLOW_BLOCKING=1 "$@"
 }
 
 call_babeltrace_thapi() {
