Enable sampling energy with --sample.

--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -336,9 +336,12 @@ setup_lttng() {
     #Activate sampling on non-blocking stream
     if [ $sample == true ]; then
         export LTTNG_UST_SAMPLING=1
+        export LTTNG_UST_SAMPLING_ENERGY=1
         lttngq enable-channel --userspace nonblocking-channel
         lttngq enable-event --channel=nonblocking-channel --userspace lttng_ust_sampling:*
+<% if languages.include?("ze") %>
         lttngq enable-event --channel=nonblocking-channel --userspace lttng_ust_ze_sampling:*
+<% end %>
         lttngq add-context --userspace --channel=nonblocking-channel -t vpid -t vtid
     fi
 
