--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -43,8 +43,7 @@ thapi_metadata_LDFLAGS = $(LTTNG_UST_LIBS)
 bin_PROGRAMS = thapi_metadata
 
 bin_SCRIPTS = \
-	babeltrace_thapi \
-	babeltrace_energy
+	babeltrace_thapi
 
 .PHONY: version
 
