--- a/ze/ze_events.yaml
+++ b/ze/ze_events.yaml
@@ -1,10 +1,32 @@
 ---
 lttng_ust_ze_sampling:
   events:
+  - name: copyEngine
+    args:
+    - [ ze_device_handle_t, hDevice ]
+    - [ uint32_t, subDevice ]
+    - [ uint64_t, activeTime ]
+    - [ uint64_t, timestamp ]
+    fields:
+    - [ ctf_integer_hex, uintptr_t, hDevice, "(uintptr_t)hDevice" ]
+    - [ ctf_integer, uint32_t, subDevice, "subDevice" ]
+    - [ ctf_integer, uint64_t, activeTime, "activeTime" ]
+    - [ ctf_integer, uint64_t, timestamp, "timestamp" ]
+  - name: computeEngine
+    args:
+    - [ ze_device_handle_t, hDevice ]
+    - [ uint32_t, subDevice ]    
+    - [ uint64_t, activeTime ]
+    - [ uint64_t, timestamp ]
+    fields:
+    - [ ctf_integer_hex, uintptr_t, hDevice, "(uintptr_t)hDevice" ]
+    - [ ctf_integer, uint32_t, subDevice, "subDevice" ]
+    - [ ctf_integer, uint64_t, activeTime, "activeTime" ]
+    - [ ctf_integer, uint64_t, timestamp, "timestamp" ]
   - name: gpu_energy
     args:
     - [ ze_device_handle_t, hDevice ]
-    - [ uint32_t, domain]
+    - [ uint32_t, domain ]
     - [ uint64_t, energy ]
     - [ uint64_t, timestamp ]
     fields:
@@ -15,8 +37,8 @@ lttng_ust_ze_sampling:
   - name: gpu_frequency
     args:
     - [ ze_device_handle_t, hDevice ]
-    - [ uint32_t, domain]
-    - [ uint64_t, timestamp ] 
+    - [ uint32_t, domain ]
+    - [ uint64_t, timestamp ]
     - [ uint64_t, frequency ]
     fields:
     - [ ctf_integer_hex, uintptr_t, hDevice, "(uintptr_t)hDevice" ]
