sysman-metrics updated

--- a/xprof/btx_interval_model.yaml
+++ b/xprof/btx_interval_model.yaml
@@ -143,9 +143,8 @@
                 :cast_type: uint32_t
             - :name: activeTime
               :field_class:
-                :type: integer_unsigned
-                :field_value_range: 64
-                :cast_type: uint64_t
+                :type: single
+                :cast_type: float
       - :name: lttng:copyEU
         :payload_field_class:
           :type: structure
@@ -162,6 +161,5 @@
                 :cast_type: uint32_t
             - :name: activeTime
               :field_class:
-                :type: integer_unsigned
-                :field_value_range: 64
-                :cast_type: uint64_t
+                :type: single
+                :cast_type: float
